# BCM3D-2.0

./: LICENSE  README.md  pyproject.toml
IntermediateImageGenerate/: IntermediateImageGenerate.py  README.md
NetworkPredict/: prediction.ipynb
NetworkTraining/: README.md  training.ipynb
PCA/: Cell_props.m  PCA.ipynb  README.md
PreProcessing (optional)/: README.md
Segmentation/: README.md  Segmentation.py
ShapeIdentify/: README.md  check_output.ipynb  extract_objects.ipynb  shape3D_prediction.ipynb  shape3D_training.ipynb
TrainingDataGenerate/: README.md  datagen.ipynb
jupyterNotebooks/: datagen.ipynb  predict.ipynb  train.ipynb
logo/: Thumbs.db
src/: GeneralFunctions.py  PostProcess.py  preprocess.py  segmentation.py
